# Claude-Control

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  README.md  package-lock.json  package.json  tsconfig.json
.claude/skills/claude-control-setup/: SKILL.md
docs/: SETUP.md  STATUS.md  tia-recipes.md
docs/architecture/: implemented-architecture.md
docs/research/: 2026-05-30-distribution.md  2026-05-30-ironrdp.md  2026-05-30-ocr-perception.md  2026-05-30-uia-agent.md  2026-05-30-windows-ssh.md  README.md
docs/superpowers/plans/: 2026-05-30-claude-control-roadmap.md  2026-05-30-phase-1-ssh-fast-path.md  2026-06-01-rdp-client-plane.md  2026-06-02-control-panel-gui.md
docs/superpowers/specs/: 2026-05-30-claude-control-design.md  2026-05-31-distribution-design.md  2026-05-31-remote-tia-control-design.md  2026-06-01-rdp-client-remote-control-design.md  2026-06-02-control-panel-gui-design.md
gui/: build.sh  make-icon.swift
gui/Sources/: main.swift
scripts/: cc.mjs  creds.mjs  live-validate.mjs  mcp-test.mjs  setup.mjs
sidecar/: Cargo.toml
sidecar/src/: main.rs  proto.rs  rdp.rs
src/: config.ts  creds.ts  index.ts  ipc.ts  keymap.ts  rdp.ts  rdpEnable.ts  server.ts  smoke.ts  ssh.ts  state.ts  tia.ts  uia.ts  visual.ts
test/: creds.test.mjs  ipc.test.mjs  keymap.test.mjs  mock-sidecar.mjs  rdp-plane.test.mjs  state.test.mjs
windows/: bootstrap.ps1  helper.ps1  provision.ps1  tia-openness.ps1  uia-accelerator.ps1
