[package]
name = "cc-rdp"
version = "0.1.0"
edition = "2021"
description = "Headless RDP client sidecar for Claude-Control, driven over stdio by the Node MCP server."
license = "MIT OR Apache-2.0"

[[bin]]
name = "cc-rdp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time", "net"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[profile.release]
opt-level = 2
